--- a/fog/fog.html
+++ b/fog/fog.html
@@ -1,4 +1,4 @@
-<div id="container">
-    <img id="fog" src="fog1.png">
+<div class="container">
+    <img class="fog" src="https://proxy.everskies.com/a/https%3A%2F%2Fraw.githubusercontent.com%2FKeijukoiso%2FesProfilePieces%2Fmain%2Ffog%2Ffog1.png" alt="fog1.png">
 </div>
 
